--- a/textCNN_IMDB.ipynb
+++ b/textCNN_IMDB.ipynb
@@ -161,7 +161,7 @@
       "metadata": {
         "id": "D4hEm_F-uC8C",
         "colab_type": "code",
-        "outputId": "41873300-397c-451b-b0fe-87651ebab273",
+        "outputId": "d1d05829-4707-4207-9e9f-8ea1d26e04a6",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 70
@@ -177,8 +177,8 @@
         {
           "output_type": "stream",
           "text": [
-            "['what', 'is', 'ben', 'shapiro', \"'s\", 'mbti', 'type', '\\\\?'] 0\n",
-            "['do', 'you', 'have', 'an', 'adopted', 'dog', ',', 'how', 'would', 'you', 'encourage', 'people', 'to', 'adopt', 'and', 'not', 'shop', '\\\\?'] 0\n"
+            "['crackerjack', 'is', 'a', 'simple', 'but', 'feelgood', 'movie', 'where', 'the', 'good', 'guys', 'are', 'very', 'good', 'and', 'the', 'bad', 'guys', 'are', 'very', 'bad', 'and', 'the', 'central', 'character', 'is', 'tempted', 'by', 'both', 'sides br', 'br', 'the', 'combination', 'of', 'the', 'central', 'character', 'being', 'played', 'by', 'mick', 'malloy', 'and', 'the', 'central', 'setting', 'being', 'the', 'local', 'lawn', 'bowls', 'clubs', 'drew', 'an', 'unusually', 'broad', 'crowd', 'ranging', 'from', 'large', 'numbers', 'of', 'teenagers', 'to', 'large', 'numbers', 'of', 'senior', 'citizens', '', 'and', 'all', 'laughed', 'at', 'the', 'comedy br', 'br', 'as', 'would', 'be', 'expected', 'of', 'a', 'movie', 'with', 'mick', 'malloy', 'and', 'judith', 'lucy', 'there', 'was', 'quite', 'a', 'bit', 'of', 'swearing', ',', 'but', 'it', 'was', 'not', 'overdone', 'and', 'the', 'audience', 'i', 'sat', 'with', 'certainly', 'enjoyed', 'it ! br', 'br', 'mick', 'malloy', 'did', 'a', 'good', 'job', 'as', 'the', 'lazy', 'bloke', 'who', 'joined', 'the', 'bowls', 'club', '\\\\(', 'three', 'times', '\\\\)', 'simply', 'to', 'get', 'parking', 'spaces', '\\\\(', 'one', 'for', 'himself', 'and', 'two', 'for', 'leasing', 'to', 'others', 'at', 'a', 'premium', '\\\\)', 'but', 'who', 'has', 'everything', 'fall', 'down', 'on', 'him', 'when', 'he', 'is', 'required', 'to', 'play', 'or', 'lose', 'his', 'membership br', 'br', 'judith', 'lucy', 'does', 'a', 'fine', 'job', 'as', 'his', 'local', 'journalist', '', 'love', '', 'interest', 'and', 'there', 'are', 'fabulous', 'performances', 'from', 'bill', 'hunter', ',', 'frank', 'wilson', ',', 'monica', 'maughan', ',', 'lois', 'ramsey', 'and', 'many', 'others br', 'br', 'john', 'clarke', \"'s\", 'dour', 'role', 'as', 'the', 'bad', 'guy', 'is', 'not', 'one', 'of', 'his', 'funniest', 'but', 'he', 'gives', 'a', 'solid', 'performance br', 'br', 'the', 'not', 'so', 'subtle', 'swipes', 'at', 'pokies', 'provide', 'a', 'bit', 'of', 'a', 'serious', 'note', 'to', 'this', 'otherwise', 'light', 'comedy br', 'br', \"i'm\", 'sure', 'that', 'those', 'who', 'enjoyed', 'the', 'castle', 'and', 'the', 'dish', 'would', 'also', 'enjoy', 'this', 'movie', ''] positive\n",
+            "['probably', 'my', 'all', '', 'time', 'favorite', 'movie', ',', 'a', 'story', 'of', 'selflessness', ',', 'sacrifice', 'and', 'dedication', 'to', 'a', 'noble', 'cause', ',', 'but', 'it', \"'s\", 'not', 'preachy', 'or', 'boring', '', 'it', 'just', 'never', 'gets', 'old', ',', 'despite', 'my', 'having', 'seen', 'it', 'some', '15', 'or', 'more', 'times', 'in', 'the', 'last', '25', 'years', '', 'paul', 'lukas', \"'\", 'performance', 'brings', 'tears', 'to', 'my', 'eyes', ',', 'and', 'bette', 'davis', ',', 'in', 'one', 'of', 'her', 'very', 'few', 'truly', 'sympathetic', 'roles', ',', 'is', 'a', 'delight', '', 'the', 'kids', 'are', ',', 'as', 'grandma', 'says', ',', 'more', 'like', '', 'dressed', '', 'up', 'midgets', '', 'than', 'children', ',', 'but', 'that', 'only', 'makes', 'them', 'more', 'fun', 'to', 'watch', '', 'and', 'the', 'mother', \"'s\", 'slow', 'awakening', 'to', 'what', \"'s\", 'happening', 'in', 'the', 'world', 'and', 'under', 'her', 'own', 'roof', 'is', 'believable', 'and', 'startling', '', 'if', 'i', 'had', 'a', 'dozen', 'thumbs', ',', 'they', \"'d\", 'all', 'be', '', 'up', '', 'for', 'this', 'movie', ''] positive\n"
           ],
           "name": "stdout"
         }
@@ -193,10 +193,10 @@
       },
       "source": [
         "#%% Check the dataset\n",
-        "TEXT.build_vocab(train, vectors=GloVe(name=\"6B\", dim=300))\n",
+        "TEXT.build_vocab(train, vectors= 'glove.6B.300d')\n",
         "LABEL.build_vocab(train)\n",
         "#%% load the pretrained embedding\n",
-        "vocab = REVIEW.vocab\n",
+        "vocab = TEXT.vocab\n",
         "\n",
         "#%% Create the Iterator for datasets (Iterator works like dataloader)\n",
         "\n",
@@ -231,7 +231,8 @@
         "        self.embed.weight.data.copy_(vocab_built.vectors)\n",
         "    \n",
         "        #Convolutional Layers with different window size kernels\n",
-        "        self.convs = nn.ModuleList([nn.Conv2d(1, dim_channel, w, emb_dim) for w in kernel_wins])\n",
+        "        print([w for w in kernel_wins])\n",
+        "        self.convs = nn.ModuleList([nn.Conv2d(1, dim_channel, (w, emb_dim)) for w in kernel_wins])\n",
         "        #Dropout layer\n",
         "        self.dropout = nn.Dropout(0.6)\n",
         "        \n",
@@ -243,13 +244,15 @@
         "        emb_x = emb_x.unsqueeze(1)\n",
         "\n",
         "        con_x = [conv(emb_x) for conv in self.convs]\n",
-        "        \n",
+        "\n",
         "        pool_x = [F.max_pool1d(x.squeeze(-1), x.size()[2]) for x in con_x]\n",
+        "        print(pool_x[0].size())\n",
         "        \n",
-        "        fc_x = torch.stack(pool_x, dim=1)\n",
+        "        fc_x = torch.cat(pool_x, dim=1)\n",
+        "        \n",
         "        fc_x = fc_x.squeeze(-1)\n",
+        "        print(fc_x.size())\n",
         "        fc_x = self.dropout(fc_x)\n",
-        "        \n",
         "        logit = self.fc(fc_x)\n",
         "        return logit\n",
         "        \n",
@@ -257,9 +260,9 @@
         "#%% Training the Model\n",
         "def train(model, device, train_itr, optimizer, epoch, max_epoch):\n",
         "    model.train()\n",
-        "    corrects, train_loss = 0,0\n",
+        "    corrects, train_loss = 0.0,0\n",
         "    for batch in train_itr:\n",
-        "        text, target = batch.question_text, batch.target\n",
+        "        text, target = batch.text, batch.label\n",
         "        text = torch.transpose(text,0, 1)\n",
         "        target.data.sub_(1)\n",
         "        text, target = text.to(device), target.to(device)\n",
@@ -280,11 +283,11 @@
         "  \n",
         "    return train_loss, accuracy\n",
         "    \n",
-        "def eval(model, device, test_itr):\n",
+        "def valid(model, device, test_itr):\n",
         "    model.eval()\n",
-        "    corrects, test_loss = 0,0\n",
+        "    corrects, test_loss = 0.0,0\n",
         "    for batch in test_itr:\n",
-        "        text, target = batch.question_text, batch.target\n",
+        "        text, target = batch.text, batch.label\n",
         "        text = torch.transpose(text,0, 1)\n",
         "        target.data.sub_(1)\n",
         "        text, target = text.to(device), target.to(device)\n",
@@ -311,15 +314,15 @@
       "metadata": {
         "id": "qNHg-VStdsrB",
         "colab_type": "code",
-        "outputId": "8bb170c5-0bac-4161-af2a-7a88723c072c",
+        "outputId": "5a9ba09e-b7a5-462c-c9e0-0f3e6b8ddaf9",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 565
+          "height": 945
         }
       },
       "source": [
         "#%%\n",
-        "model = textCNN(vocab, 300, 100, [6, 12 , 24] , 2).to('cuda')\n",
+        "model = textCNN(vocab, 300, 100, [3, 4 , 5] , 2).to('cuda')\n",
         "# print the model summery\n",
         "print(model)    \n",
         "    \n",
@@ -341,13 +344,14 @@
         "    tr_loss, tr_acc = train(model, device, train_iter, optimizer, epoch, 100)\n",
         "    print('Train Epoch: {} \\t Loss: {} \\t Accuracy: {}'.format(epoch, tr_loss, tr_acc))\n",
         "    \n",
-        "    ts_loss, ts_acc = eval(model, device, test_iter)\n",
-        "    print('Test Epoch: {} \\t Loss: {} \\t Accuracy: {}'.format(epoch, ts_loss, ts_acc))\n",
+        "    ts_loss, ts_acc = valid(model, device, test_iter)\n",
+        "    print('Valid Epoch: {} \\t Loss: {} \\t Accuracy: {}'.format(epoch, ts_loss, ts_acc))\n",
         "    \n",
         "    if ts_acc > best_test_acc:\n",
         "        best_test_acc = ts_acc\n",
         "        #save paras(snapshot)\n",
         "        print(\"model saves at {} accuracy\".format(best_test_acc))\n",
+        "        torch.save(model.state_dict(), \"textCNN_IMDB_best_valid\")\n",
         "        \n",
         "    train_loss.append(tr_loss)\n",
         "    train_acc.append(tr_acc)\n",
@@ -355,24 +359,44 @@
         "    test_acc.append(ts_acc)\n",
         "\n"
       ],
-      "execution_count": 14,
+      "execution_count": 42,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
+            "[3, 4, 5]\n",
             "textCNN(\n",
-            "  (embed): Embedding(185314, 300)\n",
-            "  (conv_w3): Conv2d(1, 100, kernel_size=(3, 300), stride=(1, 1))\n",
-            "  (conv_w4): Conv2d(1, 100, kernel_size=(4, 300), stride=(1, 1))\n",
-            "  (conv_w5): Conv2d(1, 100, kernel_size=(5, 300), stride=(1, 1))\n",
+            "  (embed): Embedding(119131, 300)\n",
+            "  (convs): ModuleList(\n",
+            "    (0): Conv2d(1, 100, kernel_size=(3, 300), stride=(1, 1))\n",
+            "    (1): Conv2d(1, 100, kernel_size=(4, 300), stride=(1, 1))\n",
+            "    (2): Conv2d(1, 100, kernel_size=(5, 300), stride=(1, 1))\n",
+            "  )\n",
             "  (dropout): Dropout(p=0.6)\n",
             "  (fc): Linear(in_features=300, out_features=2, bias=True)\n",
             ")\n",
-            "Train Epoch: 1 \t Loss: 0.0020322306527946767 \t Accuracy: 95\n",
-            "Test Epoch: 1 \t Loss: 0.0017544562399427405 \t Accuracy: 95\n",
-            "model saves at 95 accuracy\n",
-            "Train Epoch: 2 \t Loss: 0.0017895910681491195 \t Accuracy: 95\n",
-            "Test Epoch: 2 \t Loss: 0.001800485071341099 \t Accuracy: 95\n"
+            "torch.Size([64, 100, 1])\n",
+            "torch.Size([64, 300])\n",
+            "torch.Size([64, 100, 1])\n",
+            "torch.Size([64, 300])\n",
+            "torch.Size([64, 100, 1])\n",
+            "torch.Size([64, 300])\n",
+            "torch.Size([64, 100, 1])\n",
+            "torch.Size([64, 300])\n",
+            "torch.Size([64, 100, 1])\n",
+            "torch.Size([64, 300])\n",
+            "torch.Size([64, 100, 1])\n",
+            "torch.Size([64, 300])\n",
+            "torch.Size([64, 100, 1])\n",
+            "torch.Size([64, 300])\n",
+            "torch.Size([64, 100, 1])\n",
+            "torch.Size([64, 300])\n",
+            "torch.Size([64, 100, 1])\n",
+            "torch.Size([64, 300])\n",
+            "torch.Size([64, 100, 1])\n",
+            "torch.Size([64, 300])\n",
+            "torch.Size([64, 100, 1])\n",
+            "torch.Size([64, 300])\n"
           ],
           "name": "stdout"
         },
@@ -383,8 +407,10 @@
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
             "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-14-d0f264a57324>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     18\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mepoch\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m10\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     19\u001b[0m     \u001b[0;31m#train loss\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 20\u001b[0;31m     \u001b[0mtr_loss\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtr_acc\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtrain\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodel\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdevice\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtrain_iter\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0moptimizer\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mepoch\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m100\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     21\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Train Epoch: {} \\t Loss: {} \\t Accuracy: {}'\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mepoch\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtr_loss\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtr_acc\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     22\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m<ipython-input-13-2373c67b55ab>\u001b[0m in \u001b[0;36mtrain\u001b[0;34m(model, device, train_itr, optimizer, epoch, max_epoch)\u001b[0m\n\u001b[1;32m     54\u001b[0m         \u001b[0moptimizer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     55\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 56\u001b[0;31m         \u001b[0mtrain_loss\u001b[0m\u001b[0;34m+=\u001b[0m \u001b[0mloss\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mitem\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     57\u001b[0m         \u001b[0mresult\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmax\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlogit\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     58\u001b[0m         \u001b[0mcorrects\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mresult\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mview\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtarget\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msize\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdata\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0mtarget\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m<ipython-input-42-c0456bfdc0f4>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     18\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mepoch\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m10\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     19\u001b[0m     \u001b[0;31m#train loss\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 20\u001b[0;31m     \u001b[0mtr_loss\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtr_acc\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtrain\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodel\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdevice\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtrain_iter\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0moptimizer\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mepoch\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m100\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     21\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Train Epoch: {} \\t Loss: {} \\t Accuracy: {}'\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mepoch\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtr_loss\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtr_acc\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     22\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m<ipython-input-41-f981f28eb62c>\u001b[0m in \u001b[0;36mtrain\u001b[0;34m(model, device, train_itr, optimizer, epoch, max_epoch)\u001b[0m\n\u001b[1;32m     47\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     48\u001b[0m         \u001b[0mloss\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mF\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcross_entropy\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlogit\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtarget\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 49\u001b[0;31m         \u001b[0mloss\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbackward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     50\u001b[0m         \u001b[0moptimizer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     51\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/torch/tensor.py\u001b[0m in \u001b[0;36mbackward\u001b[0;34m(self, gradient, retain_graph, create_graph)\u001b[0m\n\u001b[1;32m    105\u001b[0m                 \u001b[0mproducts\u001b[0m\u001b[0;34m.\u001b[0m \u001b[0mDefaults\u001b[0m \u001b[0mto\u001b[0m\u001b[0;31m \u001b[0m\u001b[0;31m`\u001b[0m\u001b[0;31m`\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;31m`\u001b[0m\u001b[0;31m`\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    106\u001b[0m         \"\"\"\n\u001b[0;32m--> 107\u001b[0;31m         \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mautograd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbackward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgradient\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mretain_graph\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcreate_graph\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    108\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    109\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mregister_hook\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mhook\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/torch/autograd/__init__.py\u001b[0m in \u001b[0;36mbackward\u001b[0;34m(tensors, grad_tensors, retain_graph, create_graph, grad_variables)\u001b[0m\n\u001b[1;32m     91\u001b[0m     Variable._execution_engine.run_backward(\n\u001b[1;32m     92\u001b[0m         \u001b[0mtensors\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgrad_tensors\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mretain_graph\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcreate_graph\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 93\u001b[0;31m         allow_unreachable=True)  # allow_unreachable flag\n\u001b[0m\u001b[1;32m     94\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     95\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
             "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
           ]
         }
