--- a/textCNN_IMDB.ipynb
+++ b/textCNN_IMDB.ipynb
@@ -53,7 +53,9 @@
         "import torch\n",
         "import torch.nn as nn\n",
         "import torch.optim as optim\n",
-        "import torch.nn.functional as F"
+        "import torch.nn.functional as F\n",
+        "\n",
+        "import matplotlib.pyplot as plt"
       ],
       "execution_count": 0,
       "outputs": []
@@ -70,7 +72,7 @@
         "df = pd.read_csv('./IMDB_Dataset.csv')\n",
         "rng = RandomState()\n",
         "\n",
-        "tr = df.sample(frac=0.8, random_state=rng)\n",
+        "tr = df.sample(frac=0.7, random_state=rng)\n",
         "tst = df.loc[~df.index.isin(tr.index)]\n",
         "tr.to_csv('train.csv', index=False)\n",
         "tst.to_csv('valid.csv', index=False)"
@@ -231,7 +233,6 @@
         "        self.embed.weight.data.copy_(vocab_built.vectors)\n",
         "    \n",
         "        #Convolutional Layers with different window size kernels\n",
-        "        print([w for w in kernel_wins])\n",
         "        self.convs = nn.ModuleList([nn.Conv2d(1, dim_channel, (w, emb_dim)) for w in kernel_wins])\n",
         "        #Dropout layer\n",
         "        self.dropout = nn.Dropout(0.6)\n",
@@ -246,12 +247,11 @@
         "        con_x = [conv(emb_x) for conv in self.convs]\n",
         "\n",
         "        pool_x = [F.max_pool1d(x.squeeze(-1), x.size()[2]) for x in con_x]\n",
-        "        print(pool_x[0].size())\n",
         "        \n",
         "        fc_x = torch.cat(pool_x, dim=1)\n",
         "        \n",
         "        fc_x = fc_x.squeeze(-1)\n",
-        "        print(fc_x.size())\n",
+        "\n",
         "        fc_x = self.dropout(fc_x)\n",
         "        logit = self.fc(fc_x)\n",
         "        return logit\n",
@@ -314,10 +314,10 @@
       "metadata": {
         "id": "qNHg-VStdsrB",
         "colab_type": "code",
-        "outputId": "5a9ba09e-b7a5-462c-c9e0-0f3e6b8ddaf9",
+        "outputId": "db728765-aa78-4fa0-a829-48c5b1d312e4",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 945
+          "height": 682
         }
       },
       "source": [
@@ -342,10 +342,10 @@
         "for epoch in range(1, 10+1):\n",
         "    #train loss\n",
         "    tr_loss, tr_acc = train(model, device, train_iter, optimizer, epoch, 100)\n",
-        "    print('Train Epoch: {} \\t Loss: {} \\t Accuracy: {}'.format(epoch, tr_loss, tr_acc))\n",
+        "    print('Train Epoch: {} \\t Loss: {} \\t Accuracy: {}%'.format(epoch, tr_loss, tr_acc))\n",
         "    \n",
         "    ts_loss, ts_acc = valid(model, device, test_iter)\n",
-        "    print('Valid Epoch: {} \\t Loss: {} \\t Accuracy: {}'.format(epoch, ts_loss, ts_acc))\n",
+        "    print('Valid Epoch: {} \\t Loss: {} \\t Accuracy: {}%'.format(epoch, ts_loss, ts_acc))\n",
         "    \n",
         "    if ts_acc > best_test_acc:\n",
         "        best_test_acc = ts_acc\n",
@@ -359,7 +359,7 @@
         "    test_acc.append(ts_acc)\n",
         "\n"
       ],
-      "execution_count": 42,
+      "execution_count": 44,
       "outputs": [
         {
           "output_type": "stream",
@@ -375,28 +375,15 @@
             "  (dropout): Dropout(p=0.6)\n",
             "  (fc): Linear(in_features=300, out_features=2, bias=True)\n",
             ")\n",
-            "torch.Size([64, 100, 1])\n",
-            "torch.Size([64, 300])\n",
-            "torch.Size([64, 100, 1])\n",
-            "torch.Size([64, 300])\n",
-            "torch.Size([64, 100, 1])\n",
-            "torch.Size([64, 300])\n",
-            "torch.Size([64, 100, 1])\n",
-            "torch.Size([64, 300])\n",
-            "torch.Size([64, 100, 1])\n",
-            "torch.Size([64, 300])\n",
-            "torch.Size([64, 100, 1])\n",
-            "torch.Size([64, 300])\n",
-            "torch.Size([64, 100, 1])\n",
-            "torch.Size([64, 300])\n",
-            "torch.Size([64, 100, 1])\n",
-            "torch.Size([64, 300])\n",
-            "torch.Size([64, 100, 1])\n",
-            "torch.Size([64, 300])\n",
-            "torch.Size([64, 100, 1])\n",
-            "torch.Size([64, 300])\n",
-            "torch.Size([64, 100, 1])\n",
-            "torch.Size([64, 300])\n"
+            "Train Epoch: 1 \t Loss: 0.005894711561501026 \t Accuracy: 82\n",
+            "Valid Epoch: 1 \t Loss: 0.0042561899863183495 \t Accuracy: 88\n",
+            "model saves at 88 accuracy\n",
+            "Train Epoch: 2 \t Loss: 0.003164007855206728 \t Accuracy: 92\n",
+            "Valid Epoch: 2 \t Loss: 0.004064359970390796 \t Accuracy: 89\n",
+            "model saves at 89 accuracy\n",
+            "Train Epoch: 3 \t Loss: 0.0014511860341532156 \t Accuracy: 96\n",
+            "Valid Epoch: 3 \t Loss: 0.004918275378644466 \t Accuracy: 89\n",
+            "Train Epoch: 4 \t Loss: 0.0005917795996298082 \t Accuracy: 98\n"
           ],
           "name": "stdout"
         },
@@ -407,10 +394,8 @@
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
             "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-42-c0456bfdc0f4>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     18\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mepoch\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m10\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     19\u001b[0m     \u001b[0;31m#train loss\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 20\u001b[0;31m     \u001b[0mtr_loss\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtr_acc\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtrain\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodel\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdevice\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtrain_iter\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0moptimizer\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mepoch\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m100\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     21\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Train Epoch: {} \\t Loss: {} \\t Accuracy: {}'\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mepoch\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtr_loss\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtr_acc\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     22\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m<ipython-input-41-f981f28eb62c>\u001b[0m in \u001b[0;36mtrain\u001b[0;34m(model, device, train_itr, optimizer, epoch, max_epoch)\u001b[0m\n\u001b[1;32m     47\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     48\u001b[0m         \u001b[0mloss\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mF\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcross_entropy\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlogit\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtarget\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 49\u001b[0;31m         \u001b[0mloss\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbackward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     50\u001b[0m         \u001b[0moptimizer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     51\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/torch/tensor.py\u001b[0m in \u001b[0;36mbackward\u001b[0;34m(self, gradient, retain_graph, create_graph)\u001b[0m\n\u001b[1;32m    105\u001b[0m                 \u001b[0mproducts\u001b[0m\u001b[0;34m.\u001b[0m \u001b[0mDefaults\u001b[0m \u001b[0mto\u001b[0m\u001b[0;31m \u001b[0m\u001b[0;31m`\u001b[0m\u001b[0;31m`\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;31m`\u001b[0m\u001b[0;31m`\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    106\u001b[0m         \"\"\"\n\u001b[0;32m--> 107\u001b[0;31m         \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mautograd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbackward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgradient\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mretain_graph\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcreate_graph\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    108\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    109\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mregister_hook\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mhook\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/torch/autograd/__init__.py\u001b[0m in \u001b[0;36mbackward\u001b[0;34m(tensors, grad_tensors, retain_graph, create_graph, grad_variables)\u001b[0m\n\u001b[1;32m     91\u001b[0m     Variable._execution_engine.run_backward(\n\u001b[1;32m     92\u001b[0m         \u001b[0mtensors\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mgrad_tensors\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mretain_graph\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcreate_graph\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 93\u001b[0;31m         allow_unreachable=True)  # allow_unreachable flag\n\u001b[0m\u001b[1;32m     94\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     95\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m<ipython-input-44-c0456bfdc0f4>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     21\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Train Epoch: {} \\t Loss: {} \\t Accuracy: {}'\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mepoch\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtr_loss\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtr_acc\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     22\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 23\u001b[0;31m     \u001b[0mts_loss\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mts_acc\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mvalid\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodel\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdevice\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtest_iter\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     24\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Valid Epoch: {} \\t Loss: {} \\t Accuracy: {}'\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mepoch\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mts_loss\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mts_acc\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     25\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m<ipython-input-43-b14506559b01>\u001b[0m in \u001b[0;36mvalid\u001b[0;34m(model, device, test_itr)\u001b[0m\n\u001b[1;32m     72\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     73\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 74\u001b[0;31m         \u001b[0mtest_loss\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0mloss\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mitem\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     75\u001b[0m         \u001b[0mresult\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmax\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlogit\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     76\u001b[0m         \u001b[0mcorrects\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mresult\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mview\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtarget\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msize\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdata\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0mtarget\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
             "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
           ]
         }
